force-app/main/default/objects/LOI__c/LOI__c.object-meta.xml
<CustomObject>
    <label>LOI</label>
    <nameField>
        <displayFormat>LOI-{0000}</displayFormat>
        <label>LOI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOIs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>