force-app/main/default/objects/LOI__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Comments left by the final approver (stamped from approval history by ApprovalAuditService, completing the audit trail Junior asked for).</description>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>