force-app/main/default/objects/LOI__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which principal gave the final LOI approval (stamped from approval history by ApprovalAuditService).</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved LOIs</relationshipLabel>
    <relationshipName>Approved_LOIs</relationshipName>
    <type>Lookup</type>
</CustomField>