force-app/main/default/objects/LOI__c/fields/ARC__c.field-meta.xml
<CustomField>
    <fullName>ARC__c</fullName>
    <description>ARC (Junior&apos;s Section 13.2 field list - meaning to be confirmed with Junior; built as text so the type can be corrected cheaply).</description>
    <label>ARC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>