force-app/main/default/objects/LOI__c/fields/Closing_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Closing_Period_Days__c</fullName>
    <description>Number of days from contract execution to closing as proposed in the LOI. Typically 30-60 days.</description>
    <label>Closing Period Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>