force-app/main/default/objects/LOI__c/fields/Counter_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Counter_Cap_Rate__c</fullName>
    <label>Counter Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>