force-app/main/default/objects/LOI__c/fields/Counter_Price__c.field-meta.xml
<CustomField>
    <fullName>Counter_Price__c</fullName>
    <label>Counter Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>