force-app/main/default/objects/LOI__c/fields/Counter_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Counter_Received_Date__c</fullName>
    <label>Counter Received Date</label>
    <type>Date</type>
</CustomField>