force-app/main/default/objects/LOI__c/fields/Counter_Response__c.field-meta.xml
<CustomField>
    <fullName>Counter_Response__c</fullName>
    <label>Counter Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>