force-app/main/default/objects/LOI__c/fields/Counter_Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Counter_Response_Due__c</fullName>
    <label>Counter Response Due</label>
    <type>Date</type>
</CustomField>