force-app/main/default/objects/LOI__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For sell-side LOIs in the Disposition module - links the LOI to the Disposition being sold (Opportunity is left blank in this context). This lookup, not the record type, is the discriminator anything outside the record page should test: a single-hop lookup traversal is supported in record-triggered flow entry conditions and in formulas, where a record-type traversal is not. Added 2026-08-09 with the Acquisition_LOI / Disposition_LOI record types.</description>
    <inlineHelpText>The Disposition this LOI belongs to. Populated on sell-side LOIs only; leave blank on an acquisition LOI, which uses the Opportunity lookup instead.</inlineHelpText>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>LOIs</relationshipLabel>
    <relationshipName>LOIs</relationshipName>
    <type>Lookup</type>
</CustomField>