force-app/main/default/objects/LOI__c/fields/Due_Diligence_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Days__c</fullName>
    <description>Number of days in the due diligence period as proposed in the LOI. Typically 30-45 days. The feasibility window where DPEG can walk away.</description>
    <label>Due Diligence Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>