force-app/main/default/objects/LOI__c/fields/Earnest_Money__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money__c</fullName>
    <description>The earnest money amount DPEG commits to deposit on contract execution. Signals seriousness to the seller.</description>
    <label>Earnest Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>