force-app/main/default/objects/LOI__c/fields/Final_Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreed_Price__c</fullName>
    <description>The final agreed acquisition price after all negotiation rounds. Populated when Status = Accepted. Feeds the Opportunity Amount and the Transaction Purchase Price.</description>
    <label>Final Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>