force-app/main/default/objects/LOI__c/fields/LOI_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>LOI_Signed_Date__c</fullName>
    <label>LOI Signed Date</label>
    <type>Date</type>
</CustomField>