force-app/main/default/objects/LOI__c/fields/LOI_Status__c.field-meta.xml
<CustomField>
    <fullName>LOI_Status__c</fullName>
    <label>LOI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Countered</fullName>
            </value>
            <value>
                <fullName>Killed</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>