force-app/main/default/objects/LOI__c/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <description>Net operating income quoted in the LOI (Junior's Section 13.2 field list).</description>
    <label>NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>