force-app/main/default/objects/LOI__c/fields/Offer_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Offer_Cap_Rate__c</fullName>
    <label>Offer Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>