force-app/main/default/objects/LOI__c/fields/OneDrive_URL__c.field-meta.xml
<CustomField>
    <fullName>OneDrive_URL__c</fullName>
    <label>OneDrive URL</label>
    <type>Url</type>
</CustomField>