force-app/main/default/objects/LOI__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this LOI is for.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>LOIs</relationshipLabel>
    <relationshipName>LOIs</relationshipName>
    <type>Lookup</type>
</CustomField>