force-app/main/default/objects/LOI__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <description>Square footage stated in the LOI (Junior's Section 13.2 field list).</description>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>