force-app/main/default/objects/LOI__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Lifecycle state of the LOI. THE MASTER SET IS THE UNION OF TWO RECORD-TYPE SETS AND NO SINGLE RECORD TYPE SEES ALL TEN. Acquisition_LOI exposes Draft, Prepare/Review, Sent, Counter, Completed (unchanged). Disposition_LOI exposes Received, Under Review, Countered by DPEG, Counter Received from Buyer, Executed. The two sets are FULLY DISJOINT, so unlike NDA__c.Status__c this field alone DOES identify the record type - which is what makes every stage-keyed flexipage rule self-limiting with no record-type criterion. Five values were APPENDED 2026-08-09 and ZERO were removed, so every existing LOI keeps a valid value and no picklist sweep is needed. Drives the LOI Lightning Path (LOI_Path_Acquisition / LOI_Path_Disposition) and RecordStageAdvanceService.</description>
    <inlineHelpText>Pick the stage this LOI is in. The choices differ by record type: an acquisition LOI runs Draft, Prepare/Review, Sent, Counter, Completed; a disposition LOI runs Received, Under Review, Countered by DPEG, Counter Received from Buyer, Executed.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Prepare/Review</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Countered by DPEG</fullName>
            </value>
            <value>
                <fullName>Counter Received from Buyer</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>