force-app/main/default/objects/LOI__c/fields/Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Company__c</fullName>
    <description>Title company named in the LOI (Junior's Section 13.2 field list).</description>
    <label>Title Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>